--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "clsx": "^2.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "lucide-react": "^0.525.0",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.3",
     "react-verification-input": "^4.2.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
